c4prj1_deck/grade.txt
Grading at Sun Mar  7 18:53:35 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:11:31: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    deck->cards[deck->n_cards] = &ptr;
                               ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
